feat(bfs & design): Fix exercises